--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-select/ng-select": "^2.9.1",
     "angular4-carousel": "^3.1.8",
     "core-js": "^2.5.4",
     "ng-simple-slideshow": "^1.2.5",
