--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
     "@ng-select/ng-select": "^2.9.1",
     "angular4-carousel": "^3.1.8",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "ng-simple-slideshow": "^1.2.5",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "~6.2.0",
